--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -131,3 +131,56 @@ body {
   padding: 0 15px; /* 8px gap between slides */
 }
 
+
+/* Force zoom image behave */
+.inner-image-zoom,
+.inner-image-zoom__img {
+  width: 100% !important;
+  height: 100% !important;
+  object-fit: contain !important;
+  object-position: top !important;
+}
+
+/* Slick Slider Overrides */
+.zoomSliderBig .slick-slide {
+  padding: 0 !important;
+}
+
+.zoomSlider {
+  overflow: hidden !important;
+  padding: 0;
+}
+
+.zoomSlider .slick-slide {
+  padding: 0 !important;
+}
+
+.zoomSlider * {
+  outline: none !important;
+}
+
+.zoomSlider .item {
+  border: 2px solid transparent !important;
+  overflow: hidden;
+  border-radius: 10px;
+  cursor: pointer;
+  width: 60px !important;
+}
+
+.zoomSlider .slick-current .item {
+  border: 2px solid #3bb77e !important;
+}
+
+.zoomSlider .slick-arrow {
+  top: 55% !important;
+  zoom: 80% !important;
+}
+
+/* Hide Zoom Icon */
+.iiz__btn {
+  display: none !important;
+}
+
+
+
+
